--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,14 @@ repository = "https://github.com/edouard-music/test-framework"
 [workspace.dependencies]
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
-# TODO: serde_yaml is unmaintained. Evaluate migration to serde_yml or yaml-rust2
-# when breaking changes are acceptable. Current version works and is stable.
+# TODO [TECH-DEBT]: serde_yaml is unmaintained (dtolnay archived the repo).
+# Migration alternatives to evaluate:
+#   - serde_yml (https://github.com/sebastienrousseau/serde_yml) - direct fork
+#   - yaml-rust2 + manual serde (more control, breaking change)
+# Current version 0.9 is stable and functional. Plan migration when:
+#   - Security vulnerability is discovered, OR
+#   - Rust edition upgrade requires it, OR
+#   - New YAML features are needed
 serde_yaml = "0.9"
 serde_json = "1.0"
 
