--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -42,7 +42,7 @@ story_location: _bmad-output/implementation-artifacts
 development_status:
   # Epic 0: Foundation & Access
   epic-0: in-progress
-  0-1-configurer-un-projet-via-config-yaml: review
+  0-1-configurer-un-projet-via-config-yaml: done
   0-2-definir-et-selectionner-des-profils-de-configuration: ready-for-dev
   0-3-gestion-des-secrets-via-secret-store: backlog
   0-4-charger-des-templates-cr-ppt-anomalies: backlog
