docs(stories): add round 2 review findings for story 0-4
- Add 6 new findings from adversarial code review round 2
  (3 MEDIUM, 3 LOW — no blocking issues)
- Revert story status to in-progress pending follow-up items
- Update sprint-status.yaml accordingly

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -45,7 +45,7 @@ development_status:
   0-1-configurer-un-projet-via-config-yaml: done
   0-2-definir-et-selectionner-des-profils-de-configuration: done
   0-3-gestion-des-secrets-via-secret-store: done
-  0-4-charger-des-templates-cr-ppt-anomalies: review
+  0-4-charger-des-templates-cr-ppt-anomalies: in-progress
   0-5-journalisation-baseline-sans-donnees-sensibles: backlog
   0-6-configurer-checklist-de-testabilite-et-regles-de-scoring: backlog
   0-7-anonymisation-automatique-avant-envoi-cloud: backlog
