build(tf-config): move tempfile to workspace dep, add serde_json
- Move tempfile = "3.10" to workspace dependencies for consistency
- Add serde_json as workspace dev-dependency for serde roundtrip tests
- Update Cargo.lock accordingly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,4 @@ keyring = { version = "3.6", features = ["sync-secret-service", "windows-native"
 
 # Testing
 assert_matches = "1.5"
+tempfile = "3.10"
