--- a/crates/tf-config/Cargo.toml
+++ b/crates/tf-config/Cargo.toml
@@ -14,4 +14,5 @@ thiserror.workspace = true
 
 [dev-dependencies]
 assert_matches.workspace = true
-tempfile = "3.10"
+serde_json.workspace = true
+tempfile.workspace = true
