build(tf-config): add test-utils feature flag
- Add [features] section with test-utils flag for downstream test
  consumers to access LoadedTemplate::new_for_test()

--- a/crates/tf-config/Cargo.toml
+++ b/crates/tf-config/Cargo.toml
@@ -7,6 +7,9 @@ license.workspace = true
 description = "Configuration management for test-framework"
 readme = "README.md"
 
+[features]
+test-utils = []
+
 [dependencies]
 serde.workspace = true
 serde_yaml.workspace = true
